--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "prettier": "2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-standard": "^21.0.0"
