--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@testing-library/user-event": "^12.8.3",
         "animate.css": "^4.1.1",
         "bootstrap": "^4.6.0",
+        "husky": "^6.0.0",
+        "lint-staged": "^10.5.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -24,7 +26,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint ./",
-        "lint:fix": "eslint ./ --fix"
+        "lint:fix": "eslint ./ --fix",
+        "precommit": "lint-staged"
     },
     "eslintConfig": {
         "extends": [
