--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^12.8.3",
         "animate.css": "^4.1.1",
         "bootstrap": "^4.6.0",
+        "firebase": "^8.4.1",
         "husky": "^6.0.0",
         "lint-staged": "^10.5.4",
         "prop-types": "^15.7.2",
