--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "lint-staged": "^10.5.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.5.2",
         "react-dom": "^17.0.1",
         "react-hook-form": "^7.0.5",
         "react-router-dom": "^5.2.0",
