--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.2.2",
-        "uuid": "^8.3.2",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
@@ -66,6 +65,7 @@
         "eslint-plugin-react": "^7.23.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0",
         "stylelint": "^13.12.0",
         "stylelint-config-standard": "^21.0.0"
     }
